src/index.css
@import "tailwindcss";
*{
  scroll-behavior: smooth;
}
*::-webkit-scrollbar{
display: none;
}
*::selection {
  background: #2b2b2b; /* Change the background color to your desired color */
  color:lavender;      /* Change the text color on selection */
}

a{
  cursor: pointer;
}
#logo {
  background: linear-gradient(#65538b, #91869e, #8d1cfe94);
  font-weight: 700;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

a:hover{
  background-color: #1D283A;
  color: #fff;
  transition-duration: 0.2s;
}

#contact-btn{
  border: 1px solid #C381E4;
}



@media (max-width:840px) {
  #bod{
    flex-direction: column-reverse;
    justify-content: center;
  }
  #penatgon{
    height: 150px;
    margin-top: 20px;
  }
  #ctf{
    width: 100%;
    padding:20px 0px
  }
   #ctf h1{
    font-size: 40px;
    text-align: center;

  }
   #ctf h2{
    font-size: 30px;
    text-align: center;
   }
    #ctf p{
    font-size: 18px;
    text-align: center;
   }
#contact{
padding:7px 9px;
border-radius:10px;
font-size: 11px;
}
#download{
  padding:6px 9px;
  border-radius:10px;
  font-size: 11px;
}
#cts{
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}
#icons{
  display: flex;
  width:100%;
  justify-content: space-around;

}
#down{
  position:absolute;
  left:50%
}


}

